завершена работа над блоком aditii-menu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles/fonts.css" />
     <link rel="stylesheet" href="styles/style.css" />
     <title>Aditii</title>
   </head>
@@ -31,8 +32,39 @@
         </div>
       </nav>
     </div>
-    <div class="container-lg">
-      <h1>Hello, world!</h1>
+    <div class="container-lg aditii-menu">
+      <ul class="nav justify-content-between">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Sale</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Handbags</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Wallets</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Accessories</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Mens&nbsp;Store</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Shoes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Vintage</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact&nbsp;us</a>
+        </li>
+      </ul>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
