--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
       integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles/fonts.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles/style.css" />
     <title>Aditii</title>
   </head>
   <body>
-    <div class="container-lg">
+    <div class="aditii-container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light aditii-navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
-            ><img src="img/aditii.svg" alt="logo"
+            ><img src="img/logo.png" alt="logo"
           /></a>
           <a class="navbar-brand" href="#"
             ><div class="aditii-rightLink">
@@ -32,54 +37,95 @@
         </div>
       </nav>
     </div>
-    <div class="container-lg aditii-menu">
-      <ul class="nav justify-content-between">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sale</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Handbags</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Wallets</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Accessories</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Mens&nbsp;Store</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Shoes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Vintage</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact&nbsp;us</a>
-        </li>
-      </ul>
+    <div class="aditii-menu">
+      <div class="aditii-container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container justify-content-end">
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"
+                ><i class="fas fa-bars"></i
+              ></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link aditii-text" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link aditii-text" href="#">Sale</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link aditii-text" href="#">Handbags</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link aditii-text" href="#">Wallets</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link aditii-text" href="#">Accessories</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link aditii-text" href="#">Mens&nbsp;Store</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link aditii-text" href="#">Shoes</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link aditii-text" href="#">Vintage</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link aditii-text" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link aditii-text" href="#">Contact&nbsp;us</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
     </div>
-
+    <div class="levi-container">
+      <div class="aditii-container">
+        <div class="row justify-content-center levi-container-row">
+          <div class="col-md-5 levi-img">
+            <img src="img/levi.png" alt="levi's" />
+          </div>
+          <div class="card col-md-7">
+            <div class="card-body">
+              <h5 class="card-title aditii-text">
+                Cowhide <br />
+                Standard Crew
+              </h5>
+              <p class="card-text aditii-text">
+                White coloured, short-sleeved, printed T-shirt for men by
+                Levi's. This crew-neck T-shirt is made of organic cotton and
+                comes in a regular fit.
+              </p>
+              <a href="#" class="btn btn-primary">Shop&nbsp;now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
       crossorigin="anonymous"
     ></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
-    -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
