сверстан блок branded-card

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
           <a class="navbar-brand" href="#"
             ><div class="aditii-rightLink">
               <img src="img/shape-2.svg" alt="basket" />
-              <img src="img/sum.png" alt="basket-sum" />
+              <!-- <img src="img/sum.png" alt="basket-sum" /> -->
+              <div class="aditii-rightLink__sum">$300</div>
             </div>
           </a>
         </div>
@@ -98,18 +99,57 @@
           <div class="col-md-5 levi-img">
             <img src="img/levi.png" alt="levi's" />
           </div>
-          <div class="card col-md-7">
-            <div class="card-body">
-              <h5 class="card-title aditii-text">
+          <div class="card col-md-7 levi-card">
+            <div class="card-body levi-card-body">
+              <h5 class="card-title aditii-text levi-card-title">
                 Cowhide <br />
                 Standard Crew
               </h5>
-              <p class="card-text aditii-text">
+              <p class="card-text aditii-text levi-card-text">
                 White coloured, short-sleeved, printed T-shirt for men by
                 Levi's. This crew-neck T-shirt is made of organic cotton and
                 comes in a regular fit.
               </p>
-              <a href="#" class="btn btn-primary">Shop&nbsp;now</a>
+              <a href="#" class="btn btn-primary levi-btn">Shop&nbsp;now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="aditii-container">
+      <div class="row">
+        <div class="col branded-col">
+          <div class="card branded-card">
+            <img src="img/products-row/goods01.png" alt="goods01" />
+            <div class="card-body branded-card-body">
+              <h5 class="card-title branded-card-title">branded<br />shoes</h5>
+              <a href="#" class="btn btn-primary branded-btn">shop</a>
+            </div>
+          </div>
+        </div>
+        <div class="col branded-col branded-col2">
+          <div class="card branded-card">
+            <img
+              class="products-goods02"
+              src="img/products-row/goods02.png"
+              alt="goods02"
+            />
+            <div class="card-body branded-card-body">
+              <h5 class="card-title branded-card-title">branded<br />shoes</h5>
+              <a href="#" class="btn btn-primary branded-btn">shop</a>
+            </div>
+          </div>
+        </div>
+        <div class="col branded-col">
+          <div class="card branded-card">
+            <img
+              class="products-goods03"
+              src="img/products-row/goods03.png"
+              alt="goods03"
+            />
+            <div class="card-body branded-card-body">
+              <h5 class="card-title branded-card-title">branded<br />shoes</h5>
+              <a href="#" class="btn btn-primary branded-btn">shop</a>
             </div>
           </div>
         </div>
