сверстан блок products: 6 товаров

--- a/index.html
+++ b/index.html
@@ -155,6 +155,125 @@
         </div>
       </div>
     </div>
+    <div class="levi-container">
+      <div class="aditii-container">
+        <div class="products-title">
+          <h5 class="aditii-text">featured products</h5>
+        </div>
+      </div>
+    </div>
+    <div class="aditii-container">
+      <div class="row justify-content-evenly">
+        <div class="col-sm-6 col-lg-4 products-col">
+          <div class="card products-card">
+            <img
+              class="card-img-top products-img"
+              src="img/products-col/goods01.png"
+              alt="goods01"
+            />
+            <div class="card-body branded-card-body products-card-body">
+              <h5 class="card-title branded-card-title products-card-title">
+                branded shoes
+              </h5>
+              <div class="products-btn-div">
+                <div class="card-title branded-card-title">$300</div>
+                <a href="#" class="btn btn-primary branded-btn">buy&nbsp;now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4 products-col">
+          <div class="card products-card">
+            <img
+              class="card-img-top products-img"
+              src="img/products-col/goods02.png"
+              alt="goods01"
+            />
+            <div class="card-body branded-card-body products-card-body">
+              <h5 class="card-title branded-card-title products-card-title">
+                branded shoes
+              </h5>
+              <div class="products-btn-div">
+                <div class="card-title branded-card-title">$300</div>
+                <a href="#" class="btn btn-primary branded-btn">buy&nbsp;now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4 products-col">
+          <div class="card products-card">
+            <img
+              class="card-img-top products-img"
+              src="img/products-col/goods03.png"
+              alt="goods01"
+            />
+            <div class="card-body branded-card-body products-card-body">
+              <h5 class="card-title branded-card-title products-card-title">
+                branded shoes
+              </h5>
+              <div class="products-btn-div">
+                <div class="card-title branded-card-title">$300</div>
+                <a href="#" class="btn btn-primary branded-btn">buy&nbsp;now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4 products-col">
+          <div class="card products-card">
+            <img
+              class="card-img-top products-img"
+              src="img/products-col/goods04.png"
+              alt="goods01"
+            />
+            <div class="card-body branded-card-body products-card-body">
+              <h5 class="card-title branded-card-title products-card-title">
+                branded shoes
+              </h5>
+              <div class="products-btn-div">
+                <div class="card-title branded-card-title">$300</div>
+                <a href="#" class="btn btn-primary branded-btn">buy&nbsp;now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4 products-col">
+          <div class="card products-card">
+            <img
+              class="card-img-top products-img"
+              src="img/products-col/goods05.png"
+              alt="goods01"
+            />
+            <div class="card-body branded-card-body products-card-body">
+              <h5 class="card-title branded-card-title products-card-title">
+                branded shoes
+              </h5>
+              <div class="products-btn-div">
+                <div class="card-title branded-card-title">$300</div>
+                <a href="#" class="btn btn-primary branded-btn">buy&nbsp;now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4 products-col">
+          <div class="card products-card">
+            <img
+              class="card-img-top products-img"
+              src="img/products-col/goods06.png"
+              alt="goods01"
+            />
+            <div class="card-body branded-card-body products-card-body">
+              <h5 class="card-title branded-card-title products-card-title">
+                branded shoes
+              </h5>
+              <div class="products-btn-div">
+                <div class="card-title branded-card-title">$300</div>
+                <a href="#" class="btn btn-primary branded-btn">buy&nbsp;now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <script
