сверстан блок footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -272,6 +272,61 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="levi-container">
+      <div class="aditii-container">
+        <div class="row align-items-center levi-footer aditii-text">
+          <div class="col-sm-6 col-lg-3 levi-footer__col">
+            <h5>featdred sale</h5>
+            <a href="#">Alexis Hudson</a>
+            <a href="#">American Apparel</a>
+            <a href="#">Ben Sherman</a>
+            <a href="#">Big Buddha</a>
+            <a href="#">Chanel</a>
+            <a href="#">Christian Audigier</a>
+            <a href="#">Coach</a>
+            <a href="#">Cole Haan</a>
+          </div>
+          <div class="col-sm-6 col-lg-3 levi-footer__col">
+            <h5>mens store</h5>
+            <a href="#">Alexis Hudson</a>
+            <a href="#">American Apparel</a>
+            <a href="#">Ben Sherman</a>
+            <a href="#">Big Buddha</a>
+            <a href="#">Chanel</a>
+            <a href="#">Christian Audigier</a>
+            <a href="#">Coach</a>
+            <a href="#">Cole Haan</a>
+          </div>
+          <div class="col-sm-6 col-lg-3 levi-footer__col">
+            <h5>women store</h5>
+            <a href="#">Alexis Hudson</a>
+            <a href="#">American Apparel</a>
+            <a href="#">Ben Sherman</a>
+            <a href="#">Big Buddha</a>
+            <a href="#">Chanel</a>
+            <a href="#">Christian Audigier</a>
+            <a href="#">Coach</a>
+            <a href="#">Cole Haan</a>
+          </div>
+          <div class="col-sm-6 col-lg-3 levi-footer__col">
+            <h5>quick links</h5>
+            <a href="#">Alexis Hudson</a>
+            <a href="#">American Apparel</a>
+            <a href="#">Ben Sherman</a>
+            <a href="#">Big Buddha</a>
+            <a href="#">Chanel</a>
+            <a href="#">Christian Audigier</a>
+            <a href="#">Coach</a>
+            <a href="#">Cole Haan</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-container aditii-text">
+      <div class="aditii-container copyright-container">
+        <p>Copyright &copy; 2013 Css Author</p>
       </div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
