корректировка вложенности для menu и levi

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
                 Levi's. This crew-neck T-shirt is made of organic cotton and
                 comes in a regular fit.
               </p>
-              <a href="#" class="btn btn-primary levi-btn">Shop&nbsp;now</a>
+              <a href="#" class="btn btn-primary levi-card-btn"
+                >Shop&nbsp;now</a
+              >
             </div>
           </div>
         </div>
