завершена корректировка вложенности в sass

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="col branded-col branded-col2">
           <div class="card branded-card">
             <img
-              class="products-goods02"
+              class="branded-goods02"
               src="img/products-row/goods02.png"
               alt="goods02"
             />
@@ -145,7 +145,7 @@
         <div class="col branded-col">
           <div class="card branded-card">
             <img
-              class="products-goods03"
+              class="branded-goods03"
               src="img/products-row/goods03.png"
               alt="goods03"
             />
@@ -165,7 +165,7 @@
       </div>
     </div>
     <div class="aditii-container">
-      <div class="row justify-content-evenly">
+      <div class="row justify-content-evenly products">
         <div class="col-sm-6 col-lg-4 products-col">
           <div class="card products-card">
             <img
@@ -178,8 +178,8 @@
                 branded shoes
               </h5>
               <div class="products-btn-div">
-                <div class="card-title branded-card-title">$300</div>
-                <a href="#" class="btn btn-primary branded-btn">buy&nbsp;now</a>
+                <div class="card-title products-btn-price">$300</div>
+                <a href="#" class="btn btn-primary">buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -196,8 +196,8 @@
                 branded shoes
               </h5>
               <div class="products-btn-div">
-                <div class="card-title branded-card-title">$300</div>
-                <a href="#" class="btn btn-primary branded-btn">buy&nbsp;now</a>
+                <div class="card-title products-btn-price">$300</div>
+                <a href="#" class="btn btn-primary">buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -214,8 +214,8 @@
                 branded shoes
               </h5>
               <div class="products-btn-div">
-                <div class="card-title branded-card-title">$300</div>
-                <a href="#" class="btn btn-primary branded-btn">buy&nbsp;now</a>
+                <div class="card-title products-btn-price">$300</div>
+                <a href="#" class="btn btn-primary">buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -232,8 +232,8 @@
                 branded shoes
               </h5>
               <div class="products-btn-div">
-                <div class="card-title branded-card-title">$300</div>
-                <a href="#" class="btn btn-primary branded-btn">buy&nbsp;now</a>
+                <div class="card-title products-btn-price">$300</div>
+                <a href="#" class="btn btn-primary">buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -250,8 +250,8 @@
                 branded shoes
               </h5>
               <div class="products-btn-div">
-                <div class="card-title branded-card-title">$300</div>
-                <a href="#" class="btn btn-primary branded-btn">buy&nbsp;now</a>
+                <div class="card-title products-btn-price">$300</div>
+                <a href="#" class="btn btn-primary">buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -268,8 +268,8 @@
                 branded shoes
               </h5>
               <div class="products-btn-div">
-                <div class="card-title branded-card-title">$300</div>
-                <a href="#" class="btn btn-primary branded-btn">buy&nbsp;now</a>
+                <div class="card-title products-btn-price">$300</div>
+                <a href="#" class="btn btn-primary">buy&nbsp;now</a>
               </div>
             </div>
           </div>
